--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: chirp
 base: core18
-version: '0.4.0'
+version: 'daily'
 summary: A free, open-source tool for programming your amateur radio
 description: |
   CHIRP is a free, open-source tool for programming your amateur radio. It
@@ -12,7 +12,7 @@ confinement: strict
 
 apps:
   chirp:
-    command: bin/desktop-launch $SNAP/usr/bin/python $SNAP/chirp-hg-e91f09ca03d0/chirpw
+    command: bin/desktop-launch $SNAP/usr/bin/python $SNAP/chirp-hg-c823f6066d0e/chirpw
     environment:
       # Fallback to XWayland if running in a Wayland session.
       DISABLE_WAYLAND: 1
@@ -24,12 +24,14 @@ apps:
 parts:
   chirp:
     plugin: dump
-    source: http://d-rats.com/hg/hgwebdir.cgi/chirp.hg/archive/e91f09ca03d0.zip
+    #source: http://d-rats.com/hg/hgwebdir.cgi/chirp.hg/archive/e91f09ca03d0.zip
+    source: http://d-rats.com/hg/hgwebdir.cgi/chirp.hg/archive/tip.zip
     stage-packages:
       - python
       - python-gtk2
       - python-serial
       - python-libxml2
+      - python-future
     after:
       - desktop-gtk2
 
